demo-metadata/objects/Account__c/Account__c.object-meta.xml
<CustomObject>
    <label>Supplier Account</label>
    <pluralLabel>Supplier Accounts</pluralLabel>
    <description>Tracks external supplier and vendor accounts for procurement workflows.</description>
    <nameField>
        <label>Supplier Account Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>