demo-metadata/objects/Account__c/fields/AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue__c</fullName>
    <label>Annual Revenue</label>
    <type>Currency</type>
    <description>Estimated annual revenue of the supplier in USD.</description>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>