demo-metadata/objects/Account__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <description>Indicates whether this supplier account is currently active and approved for procurement.</description>
    <required>true</required>
    <defaultValue>true</defaultValue>
</CustomField>